--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
-  # Backend service
+  # Combined backend and frontend service
   - type: web
-    name: mengedmate-backend
+    name: mengedmate
     env: python
     buildCommand: "./build.sh"
     startCommand: "gunicorn mengedmate.wsgi:application"
@@ -9,7 +9,7 @@ services:
       - key: SECRET_KEY
         generateValue: true
       - key: DEBUG
-        value: false
+        value: true
       - key: ALLOWED_HOSTS
         value: ".onrender.com,localhost,127.0.0.1"
       - key: DATABASE_URL
@@ -17,30 +17,16 @@ services:
           name: mengedmate-db
           property: connectionString
       - key: CORS_ALLOWED_ORIGINS
-        value: "https://mengedmate-frontend.onrender.com"
+        value: "https://mengedmate.onrender.com"
       - key: FRONTEND_URL
-        value: "https://mengedmate-frontend.onrender.com"
+        value: "https://mengedmate.onrender.com"
       - key: EMAIL_HOST_USER
         sync: false
       - key: EMAIL_HOST_PASSWORD
         sync: false
-    # Ensure the database is created before the backend service starts
+    # Ensure the database is created before the service starts
     dependsOn:
       - mengedmate-db
-
-  # Frontend service
-  - type: web
-    name: mengedmate-frontend
-    env: static
-    buildCommand: "cd frontend && npm install && npm run build"
-    staticPublishPath: "./frontend/build"
-    envVars:
-      - key: REACT_APP_API_URL
-        value: "https://mengedmate-backend.onrender.com"
-    routes:
-      - type: rewrite
-        source: /*
-        destination: /index.html
 
 databases:
   - name: mengedmate-db
