--- a/render.yaml
+++ b/render.yaml
@@ -1,21 +1,10 @@
 services:
-  # Combined backend and frontend service
+  # Backend service
   - type: web
-    name: mengedmate
+    name: mengedmate-api
     env: python
     buildCommand: "./build.sh"
     startCommand: "gunicorn mengedmate.wsgi:application"
-    # Ensure templates directory is included in the build
-    buildFilter:
-      paths:
-        - templates/**
-        - static/**
-        - media/**
-        - "*.py"
-        - "*.sh"
-        - "*.txt"
-        - "*.yaml"
-        - "*.json"
     envVars:
       - key: SECRET_KEY
         generateValue: true
@@ -28,9 +17,9 @@ services:
           name: mengedmate-db
           property: connectionString
       - key: CORS_ALLOWED_ORIGINS
-        value: "https://mengedmate.onrender.com"
+        value: "https://mengedmate-web.onrender.com,http://localhost:3000"
       - key: FRONTEND_URL
-        value: "https://mengedmate.onrender.com"
+        value: "https://mengedmate-web.onrender.com"
       - key: EMAIL_HOST_USER
         sync: false
       - key: EMAIL_HOST_PASSWORD
@@ -38,6 +27,20 @@ services:
     # Ensure the database is created before the service starts
     dependsOn:
       - mengedmate-db
+
+  # Frontend service
+  - type: web
+    name: mengedmate-web
+    env: static
+    buildCommand: "cd frontend && npm install && npm run build"
+    staticPublishPath: "./frontend/build"
+    envVars:
+      - key: REACT_APP_API_URL
+        value: "https://mengedmate-api.onrender.com"
+    routes:
+      - type: rewrite
+        source: /*
+        destination: /index.html
 
 databases:
   - name: mengedmate-db
