--- a/render.yaml
+++ b/render.yaml
@@ -1,25 +1,25 @@
 services:
-  # Backend service
+  # Combined service for both frontend and backend
   - type: web
-    name: mengedmate-api
+    name: mengedmate
     env: python
-    buildCommand: "./build.sh"
+    buildCommand: "./build_combined.sh"
     startCommand: "gunicorn mengedmate.wsgi:application"
     envVars:
       - key: SECRET_KEY
         generateValue: true
       - key: DEBUG
-        value: true
+        value: false
       - key: ALLOWED_HOSTS
-        value: ".onrender.com,localhost,127.0.0.1"
+        value: "mengedmate.onrender.com,.onrender.com,localhost,127.0.0.1"
       - key: DATABASE_URL
         fromDatabase:
           name: mengedmate-db
           property: connectionString
       - key: CORS_ALLOWED_ORIGINS
-        value: "https://mengedmate-web.onrender.com,http://localhost:3000"
+        value: "https://mengedmate.onrender.com,http://localhost:3000"
       - key: FRONTEND_URL
-        value: "https://mengedmate-web.onrender.com"
+        value: "https://mengedmate.onrender.com"
       - key: EMAIL_HOST_USER
         sync: false
       - key: EMAIL_HOST_PASSWORD
@@ -27,20 +27,6 @@ services:
     # Ensure the database is created before the service starts
     dependsOn:
       - mengedmate-db
-
-  # Frontend service
-  - type: web
-    name: mengedmate-web
-    env: static
-    buildCommand: "cd frontend && npm install && npm run build"
-    staticPublishPath: "./frontend/build"
-    envVars:
-      - key: REACT_APP_API_URL
-        value: "https://mengedmate-api.onrender.com"
-    routes:
-      - type: rewrite
-        source: /*
-        destination: /index.html
 
 databases:
   - name: mengedmate-db
