--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,9 @@ Django>=4.2.0,<5.0.0
 djangorestframework>=3.14.0
 django-cors-headers>=4.0.0
 django-allauth>=0.54.0
+django-allauth-ui>=0.1.3
+django-rest-auth>=0.9.5
+dj-rest-auth>=4.0.1
 Pillow>=9.5.0
 python-dotenv>=1.0.0
 gunicorn>=21.2.0
