deleted submodules and telegram_auth

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,11 @@ CHAPA_SECRET_KEY=your-chapa-secret-key
 CHAPA_PUBLIC_KEY=your-chapa-public-key
 CHAPA_USE_SANDBOX=True
 
+# Telegram Bot Configuration (Required for Telegram Mini App)
+TELEGRAM_BOT_TOKEN=your-telegram-bot-token-here
+TELEGRAM_BOT_USERNAME=your-bot-username
+TELEGRAM_RETURN_URL=https://mengedmate.onrender.com/api/auth/telegram/webapp/
+
 # Social Authentication (Optional)
 GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
