--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,15 @@ Thumbs.db
 /mobile_frontend/
 /finalmobile.zip/
 /mobileapp.zip/
+ BACKEND_ARCHITECTURE.md
+BACKEND_EXPLANATION_SCRIPT.md
+PAYMENT_SYSTEM_FIXES_SUMMARY.md
+deploy_telegram_miniapp.sh
+evmer-telegram_miniapp.zip
+migrate.sh
+test_api_endpoints.py
+test_payment_system.py
+test_revenue_fix.py
+test_telegram_miniapp.py
+/web/
+BACKEND_ARCHITECTURE.md
